✏️fix: z-index 수정 및 프로필 이미지 태그 속성 추가

--- a/src/components/Common/Layout/Notification/Notification.module.scss
+++ b/src/components/Common/Layout/Notification/Notification.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 999;
+  z-index: 9;
   border-radius: 0;
   -webkit-backdrop-filter: blur(25px);
   backdrop-filter: blur(25px);
