--- a/src/components/Common/PopOverBox/PopOver.module.scss
+++ b/src/components/Common/PopOverBox/PopOver.module.scss
@@ -4,7 +4,7 @@
   padding: 0;
   position: fixed;
   border-radius: 10px;
-  z-index: 999;
+  z-index: 9;
   border: none;
 
   @media (min-width: 768px) {
